@@ -4,7 +4,7 @@ Maintainer: Mathew Eis <mathew@eisbox.net>
 Uploaders: Paul Wise <pabs@debian.org>
 Build-Depends:
  autotools-dev,
- debhelper (>= 6),
+ debhelper (>= 9),
  libjasper-dev,
  libjpeg-dev,
  libpng-dev
